--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -68,7 +68,8 @@
     "@types/lodash.set": "^4.3.7",
     "@types/node": "*",
     "cross-fetch": "^3.1.5",
-    "msw": "^0.49.0"
+    "msw": "^0.49.0",
+    "ts-expect": "^1.3.0"
   },
   "files": [
     "dist"
