--- a/app-config.yaml
+++ b/app-config.yaml
@@ -2,6 +2,11 @@ app:
   title: Scaffolded Backstage App
   baseUrl: http://localhost:3000
 
+parodos:
+  workflows:
+    assessment: 'onboardingAssessment_ASSESSMENT_WORKFLOW'
+    assessmentTask: 'onboardingAssessmentTask'
+
 organization:
   name: My Company
 
