--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3
+        with:
+          cache: yarn
+          node-version: 16
+
       - name: 'Build container images'
         run: |
           make build-image
