--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -16,7 +16,12 @@ jobs:
           cache: yarn
           node-version: 16
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: 'Build container images'
+        env:
+          DOCKER_BUILDKIT: 1
         run: |
           make build-image
 
