--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -72,7 +72,8 @@
     "ts-expect": "^1.3.0"
   },
   "files": [
-    "dist"
+    "dist",
+    "config.d.ts"
   ],
   "configSchema": "config.d.ts"
 }
