--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -48,6 +48,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.0",
     "react-use": "^17.2.4",
+    "use-immer": "^0.8.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
