use icon buttons

--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -41,6 +41,7 @@
     "@rjsf/utils": "^5.2.0",
     "@rjsf/validator-ajv8": "^5.2.0",
     "assert-ts": "^0.3.4",
+    "classnames": "^2.3.2",
     "immer": "^9.0.19",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
