--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -51,6 +51,7 @@
     "react-use": "^17.2.4",
     "use-immer": "^0.8.1",
     "zod": "^3.21.4",
+    "zen-observable": "^0.10.0",
     "zustand": "^4.3.6"
   },
   "peerDependencies": {
