--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -24,6 +24,7 @@ jobs:
           DOCKER_BUILDKIT: 1
         run: |
           make build-image
+          make build-image-openshift
 
       - name: Login to Quay
         uses: docker/login-action@v2
@@ -35,3 +36,4 @@ jobs:
       - name: 'Push images'
         run: |
           make push-image
+          make push-image-openshift
