--- a/app-config.yaml
+++ b/app-config.yaml
@@ -53,7 +53,7 @@ integrations:
 
 proxy:
   '/parodos':
-    target: 'http://localhost:8080/api/v1'
+    target: 'http://localhost:8080/workflow-service/api/v1'
     changeOrigin: true
     redirect: follow
     cache: 'no-cache'
@@ -64,7 +64,7 @@ proxy:
       accept: 'application/json'
 
   '/parodos-notifications':
-    target: 'http://localhost:8081/api/v1'
+    target: 'http://localhost:8081/notification-service/api/v1'
     changeOrigin: true
     redirect: follow
     cache: 'no-cache'
