--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -26,6 +26,7 @@
     "@backstage/core-plugin-api": "^1.5.1",
     "@backstage/theme": "^0.3.0",
     "@backstage/types": "^1.0.2",
+    "@cutting/use-get-parent-size": "2.1.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.2",
