--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "new": "backstage-cli new --scope internal"
+    "new": "backstage-cli new --scope internal",
+    "prepare": "husky install",
+    "postinstall": "husky install || true"
   },
   "workspaces": {
     "packages": [
@@ -33,7 +35,9 @@
     "@backstage/cli": "^0.22.7",
     "@spotify/prettier-config": "^12.0.0",
     "concurrently": "^6.0.0",
+    "husky": "^8.0.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^13.0.0",
     "node-gyp": "^9.0.0",
     "prettier": "^2.3.2",
     "typescript": "~4.6.4"
@@ -43,6 +47,10 @@
     "@types/react-dom": "^17"
   },
   "prettier": "@spotify/prettier-config",
+  "volta": {
+    "node": "18.16.0",
+    "yarn": "1.22.17"
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs,cjs}": [
       "eslint --fix",
