--- a/plugins/parodos/package.json
+++ b/plugins/parodos/package.json
@@ -45,6 +45,7 @@
     "classnames": "^2.3.2",
     "immer": "^9.0.19",
     "lodash.get": "^4.4.2",
+    "lodash.pickby": "^4.6.0",
     "lodash.set": "^4.3.2",
     "luxon": "^3.2.1",
     "mobx": "^5.15.4",
@@ -71,6 +72,7 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/lodash.get": "^4.4.7",
     "@types/lodash.set": "^4.3.7",
+    "@types/lodash.pickby": "^4.6.7",
     "@types/node": "*",
     "cross-fetch": "^3.1.5",
     "msw": "^0.49.0",
