Implement PoC for scaffolder template to trigger workflows
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -61,6 +61,7 @@ proxy:
     headers:
       Content-Type: 'application/json'
       accept: 'application/json'
+      Authorization: Basic dGVzdDp0ZXN0
 
   '/parodos-notifications':
     target: 'http://localhost:8081/api/v1'
@@ -105,6 +106,11 @@ catalog:
     # Local example template
     - type: file
       target: ../../examples/template/template.yaml
+      rules:
+        - allow: [Template]
+    # Local workflows template
+    - type: file
+      target: ../../examples/template/workflows.yaml
       rules:
         - allow: [Template]
 
