--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,6 +35,7 @@
     "@backstage/plugin-org": "^0.6.8",
     "@backstage/plugin-permission-react": "^0.4.12",
     "@backstage/plugin-scaffolder": "^1.13.1",
+    "@backstage/plugin-scaffolder-react": "^1.5.0",
     "@backstage/plugin-search": "^1.3.0",
     "@backstage/plugin-search-react": "^1.6.0",
     "@backstage/plugin-tech-radar": "^0.6.4",
@@ -47,6 +48,9 @@
     "@material-ui/icons": "^4.9.1",
     "@parodos/plugin-parodos": "^0.4.8",
     "@parodos/plugin-parodos-auth": "^0.1.0",
+    "@rjsf/core": "^3.2.1",
+    "@rjsf/core-v5": "npm:@rjsf/core@5.2.0",
+    "classnames": "^2.3.2",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
