--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,6 +21,7 @@
     "@backstage/catalog-client": "^1.4.1",
     "@backstage/catalog-model": "^1.3.0",
     "@backstage/config": "^1.0.7",
+    "@backstage/integration": "^1.4.5",
     "@backstage/plugin-app-backend": "^0.3.45",
     "@backstage/plugin-auth-backend": "^0.18.3",
     "@backstage/plugin-auth-node": "^0.2.14",
@@ -29,17 +30,21 @@
     "@backstage/plugin-permission-node": "^0.7.8",
     "@backstage/plugin-proxy-backend": "^0.2.39",
     "@backstage/plugin-scaffolder-backend": "^1.14.0",
+    "@backstage/plugin-scaffolder-node": "^0.1.4",
     "@backstage/plugin-search-backend": "^1.3.1",
     "@backstage/plugin-search-backend-module-pg": "^0.5.6",
     "@backstage/plugin-search-backend-node": "^1.2.1",
     "@backstage/plugin-techdocs-backend": "^1.6.2",
+    "@rjsf/utils": "^5.2.0",
     "app": "link:../app",
     "better-sqlite3": "^8.0.0",
     "dockerode": "^3.3.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
+    "lodash.get": "^4.4.2",
     "pg": "^8.3.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@backstage/cli": "^0.22.7",
