Support schema with multiple steps
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/examples/template/workflows.yaml
+++ b/examples/template/workflows.yaml
@@ -4,7 +4,9 @@ kind: Template
 metadata:
   name: execute-workflow
   title: Execute Parodos workflow
+  description: A template for the scaffolder that helps to walk through of Parodos workflow execution
 spec:
+  owner: user:guest
   type: service
   parameters:
     - title: Choose project
