--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -55,7 +55,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "use-immer": "^0.8.1"
   },
   "devDependencies": {
     "@backstage/test-utils": "^1.3.1",
