--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -2,10 +2,7 @@
   "name": "@parodos/e2e-tests",
   "version": "0.0.1",
   "scripts": {
-    "test": "npx playwright test",
-    "ctest": "npx playwright test --project=chromium",
-    "ftest": "npx playwright test --project=firefox",
-    "wtest": "npx playwright test --project=webkit"
+    "test": "npx playwright test"
   },
   "keywords": [],
   "author": "",
