Wait backstage app to start
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -51,4 +51,5 @@ jobs:
       - name: E2E tests
         run: |
           yarn dev:e2e &
+          yarn wait-on http://localhost:3000
           yarn e2e
