--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "lint-staged": "^13.0.0",
     "node-gyp": "^9.0.0",
     "prettier": "^2.3.2",
-    "typescript": "~4.6.4"
+    "typescript": "~4.6.4",
+    "wait-on": "^7.0.1"
   },
   "resolutions": {
     "@types/react": "^17",
