--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -49,7 +49,4 @@ jobs:
         run: yarn build:all
 
       - name: E2E tests
-        run: |
-          yarn dev:e2e &
-          yarn wait-on http://localhost:3000
-          yarn e2e
+        run: yarn e2e
