Install playwright browsers
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -48,5 +48,8 @@ jobs:
       - name: Build code
         run: yarn build:all
 
+      - name: Install playwright browsers
+        run: yarn playwright install --with-deps
+
       - name: E2E tests
         run: yarn e2e
