Setup m2k service and env variables for workflow service
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -9,8 +9,15 @@ jobs:
   test-and-build:
     runs-on: ubuntu-latest
     services:
+      m2k:
+        image: quay.io/konveyor/move2kube-ui:latest
+        ports:
+          - 8082:8082
       workflows:
         image: quay.io/parodos-dev/workflow-service:latest
+        env:
+          M2K_URL: http://m2k:8082/api/v1
+          NOTIFICATION_SERVER_URL: http://notifications:8081
         ports:
           - 8080:8080
       notifications:
