--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -22,6 +22,8 @@ jobs:
           - 8080:8080
       notifications:
         image: quay.io/parodos-dev/notification-service:latest
+        env:
+          SPRING_PROFILES_ACTIVE: local
         ports:
           - 8081:8080
     env:
