--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -18,6 +18,8 @@ jobs:
         env:
           M2K_URL: http://m2k:8082
           workflows.m2k.url: http://m2k:8082
+          workflows.mta.url: http://mta:8083
+          spring_profiles_active: local
           NOTIFICATION_SERVER_URL: http://notifications:8081
         ports:
           - 8080:8080
