Add artifacts report
Signed-off-by: Dmitriy Lazarev <w@kich.dev>

--- a/.github/workflows/on-pull-request.yaml
+++ b/.github/workflows/on-pull-request.yaml
@@ -64,3 +64,10 @@ jobs:
 
       - name: E2E tests
         run: yarn e2e
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
