--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "lint-staged": "^13.0.0",
     "node-gyp": "^9.0.0",
     "prettier": "^2.3.2",
-    "typescript": "~4.6.4",
-    "wait-on": "^7.0.1"
+    "typescript": "~4.6.4"
   },
   "resolutions": {
     "@types/react": "^17",
